# EDITH

./: .env.example  .gitignore  BUILD_LOG.md  README.md  STATE.md  pyproject.toml
.omc/state/: agent-replay-e2809caf-7f36-460e-a839-874c3f266d8b.jsonl  hud-stdin-cache.json
.omc/state/sessions/e2809caf-7f36-460e-a839-874c3f266d8b/: hud-state.json  mission-state.json  pre-tool-advisory-throttle.json  subagent-tracking-state.json
docs/: SESSION-PROTOCOL.md
docs/specs/: 00-north-star.md  01-memory-brain.md  02-pr-review-skill.md  03-voice.md  04-session-awareness.md  05-router.md  06-desktop-control.md  07-memory-viewer.md  08-repo-ingest.md  09-nl-finder.md  10-daemon-composition.md  11-background-reasoning.md  11-guard.md  12-router-background.md  _TEMPLATE.md  voice-conversation-mode.md
edith/: __init__.py
edith/brain/: __init__.py  history.py  loop.py
edith/bus/: __init__.py  event_bus.py
edith/daemon/: __init__.py  __main__.py  client.py  control.py  edithd.py  securestore.py  state.py
edith/desktop/: __init__.py  control.py  executors.py
edith/finder/: __init__.py  __main__.py  finder.py  resolve.py
edith/guard/: __init__.py  guard.py
edith/ingest/: __init__.py  __main__.py  discover.py  extract.py  fetch.py  graph_map.py  pipeline.py  redact.py  workspace.py
edith/memory/: __init__.py  embeddings.py  secrets.py  store.py  vector.py
edith/router/: __init__.py  background.py  bifrost.py  tiers.py
edith/session/: __init__.py  __main__.py  bus.py  collector.py  narrator.py
edith/skills/: __init__.py  base.py  desktop_control.py  gh.py  pr_review.py  session_query.py
edith/viewer/: __init__.py  __main__.py  demo_seed.py  server.py
edith/viewer/static/: app.js  index.html  style.css
edith/voice/: __init__.py  __main__.py  adapters.py  conversation.py  endpointing.py  io.py  live.py  persona.py  stt_test.py  tts.py  tts_test.py  wakeword_test.py
scratch/: diag_wake.py  smoke_live_collector.py  smoke_narration_cost.py  spike_session_tap.py  spike_session_tap_findings.md
scripts/: TRAIN_HEY_EDITH.md  clone_workspace.sh
scripts/sagemaker/: launch.py  train_hey_edith.py
tests/: conftest.py  test_brain_background.py  test_brain_composition.py  test_brain_history.py  test_brain_loop.py  test_brain_pause.py  test_brain_resolve_hook.py  test_brain_skill_dispatch.py  test_bus.py  test_daemon_background.py  test_daemon_control.py  test_daemon_edithd.py  test_daemon_state.py  test_desktop_control.py  test_finder.py  test_finder_resolve.py  test_graph_snapshot.py  test_graph_store.py  test_guard.py  test_ingest_discover.py  test_ingest_extract.py  test_ingest_fetch.py  test_ingest_graph_map.py  test_ingest_pipeline.py  test_ingest_redaction.py  test_ingest_workspace.py  test_memory_compact.py  test_person_gh_handle_migration.py  test_pr_review_skill.py  test_remember_never_persists_secrets.py  test_router.py  test_router_background.py  test_router_stream.py  test_router_tiers.py  test_secrets_filter.py  test_session_bus.py  test_session_collector.py  test_session_narrator.py  test_session_query_skill.py  test_skills_gh.py  (+11 more)
