[project]
name = "edith"
version = "0.1.0"
description = "EDITH — always-on local-first macOS assistant. Slice 1: Memory store."
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.8.0",
    "httpx>=0.27",
    "keyring>=25.7.0",
    "kuzu>=0.11",
    "sqlite-vec>=0.1.9",
    "tenacity>=9",
]

[project.optional-dependencies]
voice = [
    "elevenlabs",
    "faster-whisper",
    "openwakeword",
    # PIN: onnxruntime >=1.20 silently miscomputes openWakeWord's 2022-era ONNX
    # models on macOS arm64 → every wake score collapses to ~0 (cost us a whole
    # debugging saga). 1.18.1 detects "hey edith" at 0.91 / alexa at 1.0.
    "onnxruntime<1.20",
    "piper-tts",
    "sounddevice",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edith"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["edith", "tests"]
exclude = [".venv", "**/__pycache__"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "live: hits the real Bifrost gateway; skipped unless --run-live is passed",
]
